--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   device_info_plus: ^8.0.0
   connectivity_plus: ^2.3.9
   flutter_webrtc_wrapper: ^1.0.2
+  http: ^0.13.5
+  web_socket_channel: ^2.2.0
 
 dev_dependencies:
   flutter_test:
