--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   flutter_webrtc_wrapper: ^1.0.2
   http: ^0.13.5
   web_socket_channel: ^2.2.0
+  socket_io_client: ^2.0.0
 
 dev_dependencies:
   flutter_test:
