--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   http: ^0.13.5
   web_socket_channel: ^2.2.0
   socket_io_client: ^2.0.0
+  snippet_coder_utils: ^1.0.12
 
 dev_dependencies:
   flutter_test:
